# Efis

./: .gitignore  Cargo.toml  Dockerfile  README.md  cons  justfile
backup/: backup.efs
efis/: Cargo.toml  README.md  cons
efis/src/: client.rs  consensus.rs  efis.rs  errors.rs  lib.rs  parser.rs  server.rs  store.rs
efis/src/rpc/: client.rs  dispatcher.rs  mod.rs  server.rs
efis/src/storage/: backup.rs  consensus.rs  mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: btree.rs  client.rs  commands.rs  consensus.rs  data_types.rs  efis.rs  errors.rs  fs.rs  lib.rs  main.rs  parser.rs  pubsub.rs  serializer.rs  server.rs  server_tmp.rs  service.rs  store.rs
src/persist/: mod.rs  persist.rs  repo.rs
src/storage/: consensus.rs
