[package]
name = "efis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
nom = "7.1.3"
rand = "0.8.3"
thiserror = "1.0.40"
envy = "0.4"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.5.0"
tracing = "0.1.37"
tracing-subscriber = "0.3"
anyhow = "1.0.72"
async-trait = "0.1.72"
